--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="branding d-flex align-items-center">
             <div class="container position-relative d-flex align-items-left">
-                <a href="main.html" class="logo d-flex align-items-left me-3">
+                <a href="index.html" class="logo d-flex align-items-left me-3">
                     <img  src="img/cropped-logo.png" alt="Logo">
                 </a>
                 <nav id="navmenu" class="navmenu flex-grow-1 text-center ">
