--- a/knowledge.html
+++ b/knowledge.html
@@ -23,13 +23,13 @@
     <div class="header">
         <div class="branding d-flex align-items-center">
             <div class="container position-relative d-flex align-items-left">
-                <a href="main.html" class="logo d-flex align-items-left me-3">
+                <a href="index.html" class="logo d-flex align-items-left me-3">
                     <img  src="img/cropped-logo.png" alt="Logo">
                 </a>
                 <nav id="navmenu" class="navmenu flex-grow-1 text-center ">
                     <ul class="d-inline-flex list-unstyled mb-0">
-                        <il><a href="main.html#research" class="">Research</a></il>
-                        <il><a href="main.html#games" class="">Games</a></il>
+                        <il><a href="index.html#research" class="">Research</a></il>
+                        <il><a href="index.html#games" class="">Games</a></il>
                         <il><a href="https://www.ku.edu.tr/" class="">Home</a></il>
 
                     </ul>
