--- a/uno.html
+++ b/uno.html
@@ -1,58 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>UNO (web)</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- CheerpJ runtime -->
-    <script src="https://cjrtnc.leaningtech.com/4.2/loader.js"></script>
-</head>
-<body>
-<div class="header">
-    <div class="branding d-flex align-items-center">
-        <div class="container position-relative d-flex align-items-left">
-            <a href="index.html" class="logo d-flex align-items-left me-3">
-                <img src="img/cropped-logo.png" alt="Logo">
-            </a>
-            <h1 style="margin-left:12px;">UNO</h1>
-        </div>
-        <div class="container d-flex justify-content-left">
-            <div class="d-flex align-items-center gap-3" id="lang-switcher">
-                <button class="lang-btn" data-lang="es">ES</button>
-                <span class="separator">|</span>
-                <button class="lang-btn" data-lang="en">EN</button>s
-                <span class="separator">|</span>
-                <button class="lang-btn" data-lang="tr">TR</button>
-            </div>
-        </div>
-    </div>
-</div>
+    <meta charset="UTF-8">
+    <title>Koç</title>
+    <link  href="main.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
+    <script>
+        window.addEventListener('load', async () => {
+            await cheerpjInit();
 
-<main class="container" style="max-width:960px;margin:40px auto;">
-    <section id="description" class="description">
-        <h2 data-i18n="gameTitle">UNO:</h2>
-        <button id="play-uno" class="button">
-            <img src="img/uno.png" alt="UNO">
-            <span class="play-icon">▶</span><span data-i18n="play"></span>
-        </button>
-        <div class="description-box">
-            <h3 data-i18n="gameDescriptionUno"></h3>
-        </div>
-        <div id="cj" style="margin-top:16px;"></div>
-    </section>
-</main>
-
-<script src="main.js"></script>
-<script>
-    (async () => {
-        await cheerpjInit({ status: "default" });
-        document.getElementById('play-uno').addEventListener('click', async () => {
-            cheerpjCreateDisplay(1024, 700, document.getElementById('cj'));
-            await cheerpjRunJar("/app/jars/uno.jar");
         });
-    })();
-</script>
+        async function runUno() {
+            await cheerpjRunJar(".JAR/UNO.jar");
+        }
+    </script>
+
+</head>
+
+<body>
+  <div class="header">
+    <div class="branding d-flex align-items-center">
+      <div class="container position-relative d-flex align-items-left">
+        <a href="index.html" class="logo d-flex align-items-left me-3">
+          <img  src="img/cropped-logo.png" alt="Logo">
+        </a>
+        <nav id="navmenu" class="navmenu flex-grow-1 text-center ">
+          <ul class="d-inline-flex list-unstyled mb-0">
+            <il><a href="index.html#research" class="">Research</a></il>
+            <il><a href="index.html#games" class="">Games</a></il>
+            <il><a href="https://www.ku.edu.tr/" class="">Home</a></il>
+
+          </ul>
+          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        </nav>
+          <div id="lang-switcher">
+              <button class="lang-btn " data-lang="es">ES</button>
+              <span class="separator">|</span>
+              <button class="lang-btn"       data-lang="en">EN</button>
+              <span class="separator">|</span>
+              <button class="lang-btn active"       data-lang="tr">TR</button>
+          </div>
+      </div>
+    </div>
+  </div>
+
+
+  <main class="main">
+    <section id="description" class="description">
+      <h2>UNO:</h2>
+      <a href="#" onclick="runUno()" class="button">
+        <img src="img/uno.png" alt="">
+          <span  class="play-icon" data-i18n="play">▶</span>
+      </a>
+        <div class="description-box">
+            <h3 data-i18n="gameDescriptionUno"> </h3>
+        </div>
+    </section>
+  </main>
+  <script src="main.js"></script>
+  <script>
+      if (localStorage.getItem('loggedIn') !== 'true') {
+          const current = window.location.pathname.split('/').pop().replace('.html','');
+          window.location.replace('login.html?target=' + current);
+      }
+  </script>
+
 </body>
 </html>
