--- a/knowledge.html
+++ b/knowledge.html
@@ -6,7 +6,22 @@
     <link  href="main.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
+    <script>
+        window.addEventListener('load', async () => {
+            await cheerpjInit();
 
+        });
+        async function runUno() {
+            if (event) event.preventDefault();
+            const btn = document.getElementById('play-uno');
+            btn.disabled = true;
+            btn.querySelector('.play-icon').textContent = '⏳';
+            await cheerpjRunJar("./JAR/UNO.jar");
+        }
+    </script>
+    <style>
+        #uno-container { min-height: 600px; border: 1px dashed #ccc; margin-top: 16px; }
+    </style>
 
 </head>
 
@@ -20,9 +35,9 @@
                 </a>
                 <nav id="navmenu" class="navmenu flex-grow-1 text-center ">
                     <ul class="d-inline-flex list-unstyled mb-0">
-                        <il><a href="index.html#research" class="">Research</a></il>
-                        <il><a href="index.html#games" class="">Games</a></il>
-                        <il><a href="https://www.ku.edu.tr/" class="">Home</a></il>
+                        <il><a href="index.html#research" class="" data-i18n="research"></a></il>
+                        <il><a href="index.html#games" class="" data-i18n="games"></a></il>
+                        <il><a href="https://www.ku.edu.tr/" class="" data-i18n="home"></a></il>
 
                     </ul>
                     <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -66,7 +81,7 @@
         });
 
         async function runKnowledge() {
-            await cheerpjRunJar("./Knowledge.jar");
+            await cheerpjRunJar(".JAR/Knowledge.jar");
         }
     </script>
 
